# mongo

./: package.json  pyproject.toml
.github/: renovate.json
.github/workflows/: codeql.yml
buildscripts/cost_model/: requirements.txt
buildscripts/libdeps/graph_visualizer_web_stack/: package.json
