[tool.poetry]
name = "mdb-python-deps"
version = "1.0.0"
description = "MongoDB python dependencies"
authors = ["MongoDB"]
readme = "README.md"
# These packages are included as a TODO if we want to run resmoke with pex
# Currently this does nothing
packages = [
    { include = "buildscripts/resmoke.py" },
    { include = "buildscripts/mongosymb.py" },
    { include = "buildscripts/build_system_options.py" },
    { include = "buildscripts/resmokelib" },
    { include = "buildscripts/idl" },
    { include = "buildscripts/util" },
]

[tool.poetry.dependencies]
python = "==3.12.3"
# OPTIONAL
# Libdeps depdencies
networkx = "3.2"                                    # This is also used as a part of build_metrics so it is sort of required
flask = { version = "2.2.5", optional = true }
flask-cors = { version = "4.0.1", optional = true }
lxml = { version = "5.2.2", optional = true }
eventlet = { version = "0.35.2", optional = true }
gevent = { version = "23.9.1", optional = true }
progressbar2 = { version = "4.3.2", optional = true }
cxxfilt = { version = "0.3.0", optional = true }
pympler = { version = "1.0.1", optional = true }

[tool.poetry.group.aws.dependencies]
boto3 = "1.34.7"
botocore = "1.34.7"

[tool.poetry.group.build-metrics.dependencies]
jsonschema = "4.20.0"
psutil = "5.9.8"
memory-profiler = "0.61.0"
puremagic = "1.23"
tabulate = "0.9.0"

[tool.poetry.group.compile.dependencies]
cheetah3 = "==3.2.6.post1" # src/mongo/base/generate_error_codes.py
packaging = "==24.1"
regex = "==2023.12.25"
setuptools = "58.1.0"

[tool.poetry.group.core.dependencies]
psutil = "5.9.8"
pymongo = "4.6.3"
PyYAML = "5.4.1"
types-PyYAML = "~6.0.12.10"
requests = "2.32.2"
typing-extensions = "4.9.0"

[tool.poetry.group.export.dependencies]
pipx = "1.3.3"
# TODO: Add in pex as we move forward with this
# pex = "^2.1.137"
poetry = "1.7.1"

[tool.poetry.group.evergreen.dependencies]
click = "8.1.7"
inject = "5.2.0"
GitPython = "3.1.41"
pydantic = "1.10.14"
structlog = "24.1.0"

[tool.poetry.group.external-auth.dependencies]
# These are the dependencies of ldaptor
passlib = "1.7.4"
pyOpenSSL = [
    { version = "19.0.0", markers = "platform_machine == 's390x' or platform_machine == 'ppc64le'" },  # Needed for pinned cryptography package - see SERVER-70845
    { version = "22.0.0", markers = "platform_machine != 's390x' and platform_machine != 'ppc64le'" },
]
pyparsing = "3.1.2"
service_identity = "24.1.0"
twisted = "23.10.0"
'zope.interface' = "5.0.0"
ldaptor = "19.0.0"

[tool.poetry.group.idl.dependencies]
unittest-xml-reporting = "3.0.4" # Pinned because newer versions require lxml which fails to install
packaging = "24.1"

[tool.poetry.group.jira-client.dependencies]
jira = "==3.5.2"
requests-oauth = "==0.4.1"
PyJWT = "==2.8.0"          # https://github.com/pycontribs/jira/issues/247
# We are omitting pycrypto based on https://github.com/pycontribs/jira/pull/629

[tool.poetry.group.lint.dependencies]
# Note: These versions are checked by python modules in buildscripts/linter/
GitPython = "3.1.41"
mypy = "1.10.0"
pydocstyle = "6.3.0"
pylint = "3.0.3"
structlog = "24.1.0"
yamllint = "1.32.0"
yapf = "0.40.2"              # latest is 0.40.1, but that causes CI failures
types-setuptools = "69.0.0.20240115" # latest is 68.0.0.0, but that causes pip install requirements to fail
types-requests = "2.31.0.6"
tqdm = "4.66.4"
colorama = "0.4.6"

[tool.poetry.group.platform.dependencies]
pypiwin32 = { version = "==223", markers = "sys_platform == 'win32'" }
pywin32 = { version = "==306", markers = "sys_platform == 'win32'" }
cryptography = [
    { version = "2.3", markers = "platform_machine == 's390x' or platform_machine == 'ppc64le'" },     # Needed for oauthlib to use RSAAlgorithm # Version locked - see SERVER-36618
    { version = "36.0.2", markers = "platform_machine != 's390x' and platform_machine != 'ppc64le'" },
]
mongo-ninja-python = [
    { version = "1.11.1.6", markers = "sys_platform == 'linux' and platform_machine != 's390x' and platform_machine != 'ppc64le'" },
]
ninja = [
    { version = ">=1.10.0", markers = "sys_platform != 'linux' or platform_machine == 's390x' or platform_machine == 'ppc64le'" },
]

[tool.poetry.group.testing.dependencies]
curatorbin = "1.2.4"
PyKMIP = "0.10.0"
evergreen-py = "3.6.16"
jinja2 = "3.1.3"
mock = "5.1.0"
shrub-py = "1.1.4"
ocspresponder = "0.5.0"
flask = "2.2.5"
ocspbuilder = "0.10.2"

# Werkzeug is needed for ocsp tests in ocsp_mock.py
# version 3+ fails with "ImportError: cannot import name 'url_quote' from 'werkzeug.urls'"
Werkzeug = "==3.0.3"
blackduck = "1.0.1"
PyGithub = "1.56"
urllib3 = "1.26.18"
distro = "1.9.0"
dnspython = "2.6.1"
proxy-protocol = "0.11.3"
pkce = "1.0.3"
oauthlib = "3.2.2"
requests-oauthlib = "1.3.1"
packaging = "24.1"
docker = "6.1.3"
mongomock = "4.1.2"
pyjwt = "==2.8.0"
selenium = "4.14.0"
geckodriver-autoinstaller = "0.1.0"
retry = "0.9.2"
gdbmongo = "0.14.0"
googleapis-common-protos = "1.62.0"
opentelemetry-api = "1.22.0"
opentelemetry-sdk = "1.22.0"
opentelemetry-exporter-otlp-proto-common = "1.20.0"

[tool.poetry.group.tooling-metrics.dependencies]
mongo-tooling-metrics = "1.0.8"

# This can be installed with "poetry install -E libdeps"
[tool.poetry.extras]
libdeps = [
    "flask",
    "flask-cors",
    "lxml",
    "eventlet",
    "gevent",
    "progressbar2",
    "cxxfilt",
    "pympler",
]

# This entrypoint is included as a TODO if we want to run resmoke with pex
# Currently this does nothing
[tool.poetry.scripts]
resmoke = "buildscripts.resmoke:entrypoint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
